--- a/nfpa/angular.json
+++ b/nfpa/angular.json
@@ -28,6 +28,7 @@
               "src/styles.css"
             ],
             "scripts": [
+              "node_modules/chart.js/dist/chart.js",
               "node_modules/chart.js/dist/chart.js"
             ],
             "server": "src/main.server.ts",
