--- a/nfpa/package.json
+++ b/nfpa/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
     "express": "^4.18.2",
+    "intersection-observer": "^0.12.2",
     "mdb-angular-ui-kit": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
