--- a/nfpa/package.json
+++ b/nfpa/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
@@ -27,6 +28,7 @@
     "express": "^4.18.2",
     "intersection-observer": "^0.12.2",
     "mdb-angular-ui-kit": "^6.0.0",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
